--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ footer {
 
 .big-card-top-text a {
   color: #f42;
+  font-family: 'Kanit', sans-serif;
 }
 
 .big-card-date,
@@ -264,6 +265,10 @@ footer {
   color: #f42;
   padding-bottom: 1rem;
   font-family: 'Kanit', sans-serif;
+}
+
+.latest-container h2:hover {
+  color: black;
 }
 
 /*
@@ -981,7 +986,7 @@ footer {
 
   .top-right {
     background-image:
-      linear-gradient(to bottom, rgba(223, 42, 10, 0.87), rgba(7, 7, 7, 0.73)),
+      linear-gradient(to bottom right, rgba(223, 42, 10, 0.87), rgba(7, 7, 7, 0.73)),
       url('assets/Opal-796x417.jpg');
     grid-row: 1/3;
     grid-column: 1/2;
